# ocr_episode_matcher

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: cache.rs  cli.rs  config.rs  main.rs  ocr.rs  rename.rs  subtitles.rs  tvdb.rs
src/domain/: models.rs
src/infra/: cache.rs  mod.rs  tvdb.rs
src/media/: ffmpeg.rs  mod.rs  ocr.rs  subtitles.rs
src/workflows/: mod.rs  renamer.rs
src/workflows/matchers/: mod.rs  prod_code.rs  subtitle.rs
