[package]
name = "episode-matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
ocrs = "0.10"
regex = "1.10"
tempfile = "3.10"
image = "0.24"
rten = "0.21"
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
anyhow = "1.0.100"
