[package]
name = "episode-matcher"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
tempfile = "3.10"
image = "0.24"
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
anyhow = "1.0.100"
tesseract-rs = "0.1.20"
pgs-rs = "0.1.1"
rustyline = "17.0.2"
xdir = "0.1.0"
